started first activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MadLibsEKG</string>
     <string name="app_title">Mad Libs!</string>
+    <string name="noun">Enter a noun</string>
 </resources>
