--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MadLibsEKG</string>
     <string name="app_title">Mad Libs!</string>
     <string name="noun">Enter a noun</string>
+    <string name="get_madlib">Get your Mad Lib!</string>
 </resources>
