--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,18 @@
     <string name="placeholder">word</string>
     <string name="prof_name">Enter the name of a Professor</string>
     <string name="adjective">Enter an adjective</string>
+    <string name="app_idea">Enter an idea for an app</string>
+    <string name="profession">Enter a job/profession</string>
+    <string name="p_noun">Enter a plural noun</string>
+    <string name="verb">Enter a verb</string>
+    <string name="verb_ing">Enter a verb ending in -ing</string>
+    <string name="story1">Today was the first day of Mobile App Development with</string>
+    <string name="story2">. We started learning about Android Studio, where we made and app all about</string>
+    <string name="story3">. I wasn\'t too sure how class was going to go, since the professor seemed a little</string>
+    <string name="story4">, but it turns out that they know how to make a good app. Our professor is trying to buy multiple</string>
+    <string name="story5">, though they say it\'s definitely not because they are trying to become a drug lord. I don\'t know if I believe them or not, but I might just have to become a</string>
+    <string name="story6">too. You didn\'t hear that from me, though. I\'m so confident, I think I\'m gonna</string>
+    <string name="story7">this class with flying</string>
+    <string name="story8">. I just hope my Professor doesn\'t catch me</string>
+    <string name="story9">in this class. That would be embarassing.</string>
 </resources>
